--- a/docker/action.yml
+++ b/docker/action.yml
@@ -4,9 +4,16 @@ inputs:
   image-name:
     description: Image name
     required: true
+  dockerhub-username:
+    description: DockerHub username
+    required: true
+  dockerhub-token:
+    description: DockerHub token
+    required: true
+  
 
 env:
-  IMAGE_TAGS: ${{ secrets.DOCKERHUB_USERNAME }}/${{ inputs.image-name }}:latest
+  IMAGE_TAGS: ${{ inputs.dockerhub-username }}/${{ inputs.image-name }}:latest
 
 runs:
   using: "composite"
@@ -20,8 +27,8 @@ runs:
     - name: Login to DockerHub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        username: ${{ inputs.dockerhub-username }}
+        password: ${{ inputs.dockerhub-token }}
 
     - name: Build and push
       uses: docker/build-push-action@v3
